<resources>
    <string name="app_name">设备管理</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="spot_check">点检</string>
    <string name="repair">报修</string>
    <string name="maintenance">定保</string>
    <string name="minor_repair">小修</string>
    <string name="repair_done">维修完成</string>
    <string name="check_repair">维修审核</string>
    <string name="check_maintenance">定保审核</string>
    <string name="check_minor_repair">小修审核</string>
    <string name="check_equipment">设备查看</string>
    <string name="scan_code">扫码</string>
    <string name="contract_management">合同管理</string>
    <string name="help">帮助</string>
    <string name="take_photo">拍照</string>
    <string name="path">路径:</string>
    <string name="confirm">确认</string>
    <string name="type_in_number">输入设备编号</string>
    <string name="equ_code">设备编号</string>
    <string name="description">描述</string>
    <string name="upload">上传</string>
    <string name="project">项目</string>
    <string name="commit">提交</string>
    <string name="qualified">合格</string>
    <string name="unqualified">不合格</string>
    <string name="equipment">设备</string>
    <string name="check_content">检查内容</string>
    <string name="scan_qr_code">二维码扫描</string>
    <string name="query">查询</string>
    <string name="view_all_equ">查看前100台设备</string>
    <string name="equ_name">设备名称</string>
    <string name="repair_content">维修内容</string>
    <string name="contract_id">合同编号</string>
    <string name="ip_address">IP地址</string>
    <string name="default_ip">61.155.8.207</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="project_id">项目编号</string>
    <string name="property_name">资产名</string>
    <string name="date">日期</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">结束日期</string>
    <string name="query_contract">查询合同</string>
    <string name="upload_contract">上传合同图片</string>
    <string name="upload_pic">上传图片</string>
</resources>
